test/spec/get_local.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/get_local.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/get_local.wast:91:11: type mismatch at function. got i32, expected i64
  (module (func $type-local-num-vs-num (result i64) (local i32) (get_local 0)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:95:53: type mismatch at i32.eqz. got f32, expected i32
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
                                                    ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:95:11: type stack at end of function is 1. expected 0
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:99:57: type mismatch at f64.neg. got i64, expected f64
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
                                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:99:11: type stack at end of function is 1. expected 0
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:107:11: type mismatch at function. got i32, expected i64
  (module (func $type-param-num-vs-num (param i32) (result i64) (get_local 0)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:111:53: type mismatch at i32.eqz. got f32, expected i32
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
                                                    ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:111:11: type stack at end of function is 1. expected 0
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:115:57: type mismatch at f64.neg. got i64, expected f64
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
                                                        ^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:115:11: type stack at end of function is 1. expected 0
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:123:59: local variable out of range (max 2)
  (module (func $unbound-local (local i32 i64) (get_local 3)))
                                                          ^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:127:57: local variable out of range (max 2)
  (module (func $large-local (local i32 i64) (get_local 14324343)))
                                                        ^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:132:59: local variable out of range (max 2)
  (module (func $unbound-param (param i32 i64) (get_local 2)))
                                                          ^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:136:57: local variable out of range (max 2)
  (module (func $large-param (local i32 i64) (get_local 714324343)))
                                                        ^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:141:71: local variable out of range (max 3)
  (module (func $unbound-mixed (param i32) (local i32 i64) (get_local 3)))
                                                                      ^
assert_invalid error:
  out/third_party/testsuite/get_local.wast:145:69: local variable out of range (max 3)
  (module (func $large-mixed (param i64) (local i32 i64) (get_local 214324343)))
                                                                    ^^^^^^^^^
out/third_party/testsuite/get_local.wast:91: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  error: @0x0000001d: end_function_body callback failed
out/third_party/testsuite/get_local.wast:95: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  error: @0x0000001c: on_convert_expr callback failed
out/third_party/testsuite/get_local.wast:99: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  error: @0x0000001e: on_unary_expr callback failed
out/third_party/testsuite/get_local.wast:107: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  error: @0x0000001c: end_function_body callback failed
out/third_party/testsuite/get_local.wast:111: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  error: @0x0000001b: on_convert_expr callback failed
out/third_party/testsuite/get_local.wast:115: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  error: @0x0000001c: on_unary_expr callback failed
out/third_party/testsuite/get_local.wast:123: assert_invalid passed:
  error: invalid local_index: 3 (max 2)
  error: @0x0000001d: on_get_local_expr callback failed
out/third_party/testsuite/get_local.wast:127: assert_invalid passed:
  error: invalid local_index: 14324343 (max 2)
  error: @0x00000020: on_get_local_expr callback failed
out/third_party/testsuite/get_local.wast:132: assert_invalid passed:
  error: invalid local_index: 2 (max 2)
  error: @0x0000001b: on_get_local_expr callback failed
out/third_party/testsuite/get_local.wast:136: assert_invalid passed:
  error: invalid local_index: 714324343 (max 2)
  error: @0x00000021: on_get_local_expr callback failed
out/third_party/testsuite/get_local.wast:141: assert_invalid passed:
  error: invalid local_index: 3 (max 3)
  error: @0x0000001e: on_get_local_expr callback failed
out/third_party/testsuite/get_local.wast:145: assert_invalid passed:
  error: invalid local_index: 214324343 (max 3)
  error: @0x00000021: on_get_local_expr callback failed
22/22 tests passed.
;;; STDOUT ;;)
